Updates to add reports
